Fix the alignment between the check and the label

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1647,3 +1647,9 @@ div.fp-form-container {
   font-weight: 400;
   font-size: 14px;
 }
+
+.labelCheck {
+  position: relative;
+  top: -3px;
+  left: 2px;
+}
